# amplifier-bundle-director-deck

./: .gitattributes  .gitignore  README.md  bundle.md  index.html  pyproject.toml
agents/: deck-stitcher.md  ghost-deck-writer.md  slide-architect.md  transition-director.md  visual-director.md
director_deck/: html_renderer.py  pptx_builder.py  pptx_fixer.py  pptx_stitcher.py  schema.py  screenshot_tool.py  video_processor.py
docs/: SEAMLESS-TRANSITIONS-LESSONS.md
docs/superpowers/plans/: 2026-04-22-director-deck-plan.md
docs/superpowers/specs/: 2026-04-22-director-deck-design.md
recipes/: director-deck-continue.yaml  director-deck.yaml
runs/: .gitignore
scripts/: screenshot_wireframe.py
tests/: conftest.py  test_html_renderer.py  test_pptx_builder.py  test_pptx_stitcher.py  test_schema.py  test_screenshot_tool.py  test_video_processor.py
