[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "director-deck"
version = "0.1.0"
description = "Amplifier bundle: AI-powered slide deck generator with Veo 3.1 transitions"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-pptx>=0.6.23",
    "playwright>=1.44",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external tools (playwright, network)",
]

[tool.hatch.build.targets.wheel]
packages = ["director_deck"]
