[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "director-deck"
version = "0.1.0"
description = "Amplifier bundle: AI-powered slide deck generator with Veo 3.1 transitions"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "python-pptx>=0.6.23",
    "lxml>=4.0",
    "Pillow>=9.0",
    "playwright>=1.44",
    "pyyaml>=6.0",
    # static-ffmpeg ships pre-built ffmpeg + ffprobe binaries and patches PATH
    # on import. video_processor.py shells out to these as subprocess; this
    # makes the bundle work cross-platform without requiring a system install
    # (brew install ffmpeg / apt install ffmpeg). Power users who prefer
    # their own ffmpeg can still use it — static-ffmpeg only adds itself to
    # PATH; whatever's already on PATH wins.
    "static-ffmpeg>=2.0",
]
# Note: ffmpeg and ffprobe must also be available on PATH (used by video_processor.py)

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external tools (playwright, network)",
]

[tool.hatch.build.targets.wheel]
packages = ["director_deck"]
